--- a/src/RainEffect.css
+++ b/src/RainEffect.css
@@ -3,3 +3,12 @@ body {
     overflow: hidden;
     background: #061928;
 }
+
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
